:lipstick: Show images

--- a/srimongkol/Info.plist
+++ b/srimongkol/Info.plist
@@ -43,5 +43,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Eventpop-Medium.ttf</string>
+		<string>Eventpop-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
